<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/screenBackground"
  tools:context=".WalletFragment">

  <TextView
    android:id="@+id/walletWorth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:gravity="center"
    android:text="@string/total_worth_text"
    android:textColor="@color/textColor"
    android:textSize="72sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.338" />

  <Spinner
    android:id="@+id/spinnerWorth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbarSize="24sp"
    android:dropDownSelector="@color/textColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/walletWorth" />

  <Spinner
    android:id="@+id/spinnerWallet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:scrollbarSize="24sp"
    app:layout_constraintBottom_toTopOf="@+id/walletHeader"
    app:layout_constraintStart_toEndOf="@+id/TextCurrenctWallet"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/exchange_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="72dp"
    android:layout_marginRight="72dp"
    android:background="@color/buttonBackground"
    android:text="@string/exchange_button_text"
    android:padding="10sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/walletWorth" />

  <Button
    android:id="@+id/currencies_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="72dp"
    android:layout_marginLeft="72dp"
    android:background="@color/buttonBackground"
    android:text="@string/currencies_button_text"
    android:padding="10sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/walletWorth" />

  <TextView
    android:id="@+id/walletHeader"
    android:layout_width="368dp"
    android:layout_height="81dp"
    android:layout_marginStart="24dp"
    android:layout_marginLeft="24dp"
    android:text="@string/wallet_header"
    android:textSize="32sp"
    android:textColor="@color/textColor"
    app:layout_constraintBottom_toTopOf="@+id/walletWorth"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.39" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/addWallet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginBottom="24dp"
    android:clickable="true"
    android:focusable="true"
    android:src="@drawable/ic_add"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/exchange_button"
    app:layout_constraintVertical_bias="1.0" />

  <TextView
    android:id="@+id/TextCurrenctWallet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginLeft="24dp"
    android:text="@string/current_wallet"
    android:textColor="@color/textColor"
    android:textSize="15sp"
    app:layout_constraintBottom_toTopOf="@+id/walletHeader"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/currenct_stock_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginBottom="8dp"
    android:text="@android:string/unknownName"
    android:textColor="@color/textColor"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
